css/style.less
@statusbar-height: 1.2rem;
@statusbar-background: #166163;
@statusbar-dirty-background: #6f0c0c;
@gutter-lines-spacing: 0ch;
@font-family: "iosevka";
@line-height: 23px;
@font-size: 17px;
@body-background: #272922;
@body-color: contrast(@body-background);
@gutter-color: lighten(@body-background, 40%);
@ruler: 80ch;

html, body {
  margin: 0;
  padding: 0;
  width: 100%;
  height: 100%;
  font-family: "@{font-family}";
  font-size: @line-height;
  color: @body-color;
  background: @body-background;
  font-variant-ligatures: common-ligatures;
  font-weight: 200;
}

.editor {
  height: 100%;
  font-size: @font-size;
  display: flex;
  flex-direction: column;
}

.buffer {
  display: flex;
  flex-direction: row;
  flex-grow: 1;
  width: 100%;
  height: 100%;
  overflow-y: hidden;
}

.lines-container {
  flex: 1;
  position: relative;
}

.lines-container:after {
  content: '';
  position: absolute;
  height: 100%;
  top: 0;
  left: @ruler;
  background: @body-background;
  width: calc(~"100% - @{ruler}");
  opacity: 0.5;
}

.gutter-container {
  background-image:url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' version='1.1' height='@{line-height}' font-size='@{font-size}' font-family='@{font-family}' ><text x='0' y='10.5px' alignment-baseline='central' fill='@{gutter-color}'>~</text></svg>"); 
  background-repeat: repeat-y;
  user-select: none;
  margin-right: @gutter-lines-spacing;
}

.lines, .gutter {
  transition: transform 40ms ease-in;
}

.lines {
  position: relative;
}

.gutter {
  padding: 0 1ch;
  background: @body-background;
  color: @gutter-color;
  display: flex;
  flex-direction: column;
}

.line, .line-number {
  white-space: pre;
  height: @line-height;
  line-height: @line-height;
  display: flex;
  align-items: center;
}

.line-number {
  text-align: right;
  display: inline-block;
}

.cursor {
  position: absolute;
  width: 1ch;
  background: rgba(255,255,255,.5);
  white-space: pre;
  height: 0.86rem;
  border-radius: 1px;
  // padding: 0 0 1px 0;
  transform: translateY(0.1rem)
}

.status {
  width: 100%;
  background: linear-gradient(0deg, @statusbar-background, lighten(@statusbar-background, 2%));
  display: flex;
  flex-direction: row;
  align-items: center;
  height: @statusbar-height;
  white-space: pre;
  flex-grow: 0;
  flex-shrink: 1;
  position: relative;
  color: contrast(@statusbar-background);
}

.status.dirty {
  background: linear-gradient(0deg, @statusbar-dirty-background, lighten(@statusbar-dirty-background, 2%));
}

.status > div:first-child {
  margin-left: @gutter-lines-spacing + 0.3ch;
}

.status > div {
  margin-left: 2ch;
}

.status .cursor {
  transform: translate(0.2ch, (@statusbar-height - 1) / 2);
  margin-left: 0.3ch;
}

.highlights div, .selections div, .lint div {
  height: @line-height;
  position: absolute;
}

.highlights div, .selections div {
  background: lighten(@body-background, 15%);
}

.highlights div {
  filter: invert(100%);
}

.lint div {
  background-image: linear-gradient(45deg, transparent 65%, #d13b2e 80%, transparent 90%), linear-gradient(135deg, transparent 5%, #d13b2e 15%, transparent 25%), linear-gradient(135deg, transparent 45%, #d13b2e 55%, transparent 65%), linear-gradient(45deg, transparent 25%, #d13b2e 35%, transparent 50%);
  background-size: 8px 2px;
  background-repeat: repeat-x;
  background-position: left bottom;
}

.lint.lint-subRegion div {
  background-color: #d12b2e;
  opacity: 0.5;
}


.tip {
  background: fade(darken(@body-background, 10%), 80%);
  white-space: pre-wrap;
  padding: 1ch;
  font-size: 12px;
  z-index: 1;
  position: absolute;
}

.lint-status {
  margin-right: 15px;
}

.lint-status i {
  margin-right: 4px;
}

.status .status-right {
  margin-left: auto;
  display: flex;
  flex-direction: row;
}

.status-right > div {
  margin-right: 2ch;
}

.elm-overlay {
  font-size: 13px;
  z-index: 1000;
}

.elm-overlay .elm-mini-controls {
  bottom: @statusbar-height;
}


.auto-complete {
  position: absolute;
  background: @body-background;
  border: solid 1px lighten(@body-background, 30%);
  border-radius: 2px;
  bottom: @statusbar-height;
  left: 2ch;
  display: flex;
  flex-direction: column;
  overflow: auto;
  max-width: 100ch;
}

.auto-complete > div {
  padding: 0 1ch;
  line-height: 1rem;
}
.auto-complete > div.selected {
  background: lighten(@body-background, 15%);
}

.auto-complete .matched {
  font-weight: 700;
}

